[Bug #164927648] Remove extra white space

--- a/UI/assets/css/pagestyle.css
+++ b/UI/assets/css/pagestyle.css
@@ -16,11 +16,7 @@
   --bodyFontFamilyFallback: sans-serif;
   --limeColor: lime;
 }
-html, body{
-  width: 100%;
-  margin: 0;
-  overflow-x: hidden;
-}
+
 body {
   min-width: 635px !important;
   font-size: 1em;
@@ -128,12 +124,10 @@ section .transaction_message p {
   }
   html,
   body {
-    max-width: 100%;
+    width: 100vw !important;
     overflow-x: hidden;
   }
-  body {
-    width: 90vw !important;
-  }
+
   .account_details {
     flex-shrink: 1 !important;
     width: 90vw !important;
